--- a/index2.html
+++ b/index2.html
@@ -31,7 +31,7 @@
       margin: 5px;
     }
   </style>
-  <title>Rich Text Editor using JavaScript - @code.scientist x @codingtorque</title>
+  <title></title>
 </head>
 
 <body>
