title changes test in git

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       margin: 5px;
     }
   </style>
-  <title>Rich Text Editor using JavaScript - @code.scientist x @codingtorque</title>
+  <title>hiii this is title changes in git</title>
 </head>
 
 <body>
