--- a/index2.html
+++ b/index2.html
@@ -25,6 +25,11 @@
     .div-editor {
       border: none;
       margin-bottom: 10px;
+      position: sticky;
+      top:0;
+      background-color: #fff;
+      border: 1px solid rgb(177, 177, 177);
+      padding: 1%;
     }
 
     .input-editor {
